fixed iOS spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     font-family: 'Lora', serif;
     @apply bg-stone-50 text-stone-800;
     color-scheme: light;
+    padding-top: env(safe-area-inset-top);
   }
 
   input[type="date"] {
